[package]
name = "advent2020"
version = "0.1.0"
authors = ["jmeyer <joshua.meyer@metalbackgorilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
log = "0.4.11"
env_logger = "0.8.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
